src/components/App.style.scss
#app {
	display: flex;
	height: 100vh;

	.head {
		display: flex;
		justify-content: space-between;
		align-items: center;
		flex-basis: 70px;
		flex-shrink: 0;
	}

	.separator {
		margin: 16px 0;
		border-bottom: 1px $divider__color--light solid;
	}

	.btn {
		user-select: none;
		cursor: pointer;
		text-decoration: none;
		font-size: inherit;

		&.btn-big {
			position: relative;
			height: 70px;
			width: 70px;
			display: flex;
			align-items: center;
			justify-content: center;
			box-sizing: border-box;
			line-height: 0;
			font-size: round($font-size * 1.75);
			color: inherit;

			> * {
				color: inherit;
			}
		}
	}

	.align--center {
		display: flex;
		justify-content: center;
		align-items: center;
		flex-grow: 1;
	}

	.align--bottom {
		display: flex;
		justify-content: flex-end;
		flex-direction: column;
	}

	.item--empty {
		text-align: center;
		font-size: 2em;
		font-weight: 600;
		color: rgba(255, 255, 255, 0.1);
		user-select: none;
		padding: 0px 10px;
	}

	.emoji-wrapper {
		cursor: text;

		span {
			display: inline-block;
			width: 0;
			margin: 0 1.1em 0 -1.1em;
			opacity: 0;
		}

		img.emoji {
			height: 1em;
			width: 1em;
			padding: 0 1px;
			vertical-align: middle;
		}
	}
}

